[package]
name = "rfernet"
version = "0.2.0"
authors = ["Aviram Hassan <aviramyhassan@gmail.com>"]
description = "Fast Fernet bindings for Python"
license = "MIT"
edition = "2018"
keywords = ["fast", "fernet"]
readme = "README.md"

include = [
    "Cargo.toml",
#    "CHANGELOG.md",
   "LICENSE",
    "pyproject.toml",
   "README.md",
    "rust-toolchain",
    "src/*",
    "test/*.py",
#    "test/requirements.txt",
]

[lib]
name = "rfernet"
crate-type = ["cdylib"]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[dependencies]
fernet = "*"

[dependencies.pyo3]
version = "*"
features = ["extension-module"]