[package]
name = "rfernet"
version = "0.3.3"
authors = ["Aviram Hassan <aviramyhassan@gmail.com>"]
description = "Fast Fernet bindings for Python"
license = "MIT"
edition = "2018"
keywords = ["fast", "fernet"]
readme = "README.md"

include = [
    "Cargo.toml",
#    "CHANGELOG.md",
   "LICENSE",
    "pyproject.toml",
   "README.md",
    "rust-toolchain",
    "src/*",
    "test/*.py",
#    "test/requirements.txt",
]

[lib]
name = "rfernet"
crate-type = ["cdylib"]

[dependencies]
fernet = "*"
once_cell = "1.17.0"

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module", "gil-refs"]
