[project]
name = "rfernet"
requires-python = ">=3.7"
classifier = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[tool.poetry]
name = "rfernet"
version = "0.3.2"
description = "Fast Fernet bindings for Python"
authors = ["Aviram Hassan <aviramyhassan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.maturin]
manylinux = "off"
rustc-extra-args = ["-C", "target-feature=+sse2"]
strip = true

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
include = '\.pyi?$'

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.1.0,<1.4.0"]
