[tool.poetry]
name = "rfernet"
version = "0.3.5"
description = "Fast Fernet bindings for Python"
readme = "README.md"
authors = ["Aviram Hassan <aviramyhassan@gmail.com>"]
license = "MIT"
keywords = ["fast", "fernet"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.maturin]
manylinux = "off"
rustc-extra-args = ["-C", "target-feature=+sse2"]  # +sse4.1,+avx,+avx2,+fma
strip = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.3,<2.0"]
